[workspace]
resolver = "2"
members = ["pmem", "pmem-derive", "replication", "rfs"]

[workspace.dependencies]
pmem-derive = { path = "pmem-derive" }
pmem = { path = "pmem" }
rfs = { path = "rfs" }
replication = { path = "replication" }

thiserror = "1.0.61"
proptest = "1.0.0"
tempfile = "3.10.1"
rand = "0.8.5"
tango-bench = "0.5.0"
arc-swap = "1.7.1"
tokio = "1.39.2"
tracing-subscriber = { version = "0.3.18" }
tracing = "0.1.40"
