[package]
name = "pmem"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
pmem-derive = { workspace = true }
arc-swap = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"] }

[dev-dependencies]
fatfs = "0.3.6"
proptest = "1.0.0"
rand = { workspace = true, features = ["small_rng"] }
tango-bench = { workspace = true }

[[bench]]
name = "page"
harness = false
