[package]
name = "replication"
version = "0.1.0"
edition = "2021"

[dependencies]
pmem = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
