[package]
name = "rfs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
pmem = { path = "../pmem" }
pmem-derive = { path = "../pmem-derive" }
thiserror = { workspace = true }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
nfsserve = "0.10.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
tango-bench = { workspace = true }

[[bench]]
name = "rfs"
harness = false
