[package]
name = "rfs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
pmem = { workspace = true }
pmem-derive = { workspace = true }
thiserror = { workspace = true }
replication = { workspace = true }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
nfsserve = "0.10.2"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
# Only required for demonstration purposes
sha2 = "0.10.8"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
tango-bench = { workspace = true }

[[bin]]
name = "client"

[[bin]]
name = "main"

[[bench]]
name = "rfs-bench"
harness = false
